--- a/Lab 1/01_lab_assignment.Rmd
+++ b/Lab 1/01_lab_assignment.Rmd
@@ -9,7 +9,7 @@ output:
 ---
 
 ```{r,include=FALSE}
-if (!require("pacman")) install.packages("pacman")
+if (!require("pacman")) install.packages("pacman", repos = "http://cran.us.r-project.org")
 # p_load function loads packages if installed, or install then loads otherwise
 pacman::p_load(tidyverse,coronavirus,haven)
 ```
