--- a/Lab 1/01_lab_inclass.Rmd
+++ b/Lab 1/01_lab_inclass.Rmd
@@ -11,7 +11,7 @@ subtitle: 'SOC 325: Quantified-Self'
 ---
 
 ```{r,include=FALSE}
-if (!require("pacman")) install.packages("pacman")
+if (!require("pacman")) install.packages("pacman",repos = "http://cran.us.r-project.org")
 # p_load function loads packages if installed, or install then loads otherwise
 pacman::p_load(tidyverse,coronavirus,haven)
 ```
