--- a/Lab 3/03_lab_inclass.Rmd
+++ b/Lab 3/03_lab_inclass.Rmd
@@ -260,7 +260,7 @@ This does not work on JupyterHub unfortunately. You have to do this on R and Rst
 ```{r,message=FALSE,warning=FALSE}
 ## Run this code, to manage packages and install as needed.
 # Install pacman
-if (!require("pacman")) install.packages("pacman")
+if (!require("pacman")) install.packages("pacman", repos = "http://cran.us.r-project.org")
 # p_load function loads packages if installed, or install then loads otherwise
 pacman::p_load(jsonlite, ggmap,ggplot2, lubridate, zoo,here,tidyverse,kableExtra,ggmap,spotifyr,ggjoy)
 ```
